css/custom.css
html, body {
  font-style:oblique;
}
img.grayscale {
  /* Firefox 10+, Firefox on Android */
  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");

  /* IE 6-9 */
  filter: gray;

  /* Chrome 19+, Safari 6+, Safari 6+ iOS */
  -webkit-filter: grayscale(100%);

 opacity:0.8;
 filter:alpha(opacity=40); /* For IE8 and earlier */
}

img.grayscale:hover {
  /* Firefox 10+, Firefox on Android */
  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");

  /* IE 6-9 */
  filter: gray;

  /* Chrome 19+, Safari 6+, Safari 6+ iOS */
  -webkit-filter: grayscale(100%);

 opacity:1.0;
 filter:alpha(opacity=100); /* For IE8 and earlier */
}

/* Begin Navigation Bar Styling */
#nav {
  width: 100%;
  float: left;
  margin: 1em 0;
  padding: 0 140px;
  list-style: none;
  background-color: #fff;
  border-bottom: 0px solid #fff; 
  border-top: 0px solid #fff;
}
#nav li {
  float: left;
}
#nav li a {
  display: block;
  padding: 8px 40px;
  text-decoration: none;
  font-weight: bold;
  color: #000;
  border-right: 1px solid #ccc;
  border-left: 1px solid #ccc;
}
#nav li a:hover {
  color: #c00;
  background-color: #fff;
}
/* End navigation bar styling. */

#container a img {
  margin:0;
}
#releases iframe {
  display: block;
  margin: 2em auto;
  width: 400px;
}
#cyphers iframe {
  display: block;
  margin: 2em auto;
  width: 700px;
}

